bad/incr_field_array_arr_elem.example_compiler_output
ERROR
[1mbad/incr_field_array_arr_elem.lat:7:19: [1;31merror: [0;1m++ operator is valid only for integer values not `int[]`[m
	(new C[1])[2].fld++;
	                 [1;32m^[m
